- Crash when `:completion-item-yank --sel` is used on a platform without
  primary selection support (e.g. Windows/macOS).
- Crash when there's a feature permission request from Qt with an invalid URL
  (which seems to happen with Qt 5.15 sometimes).
- Crash in rare cases where QtWebKit/QtWebEngine imports fail in unexpected
  ways.
- `:config-write-py` now works with paths starting with `~/...` again.
- New site-specific quirk for a missing `globalThis` in Qt <= 5.12 on Reddit
  and Spotify.
- When `;` is added to `hints.chars`, using hint labels containing `;;` now
  works properly.
- Hint letters outside of ASCII should now work.
- When `bindings.key_mappings` is used with hints, it now works properly with
  letters outside of ASCII as well.

v1.12.0 (2020-06-01)
--------------------

Removed
~~~~~~~

- `tox -e mkvenv` which was deprecated in qutebrowser v1.10.0 is now
  removed. Use the `mkvenv.py` script instead.
- Support for using `config.bind(key, None)` in `config.py` to unbind a
  key was deprecated in v1.8.2 and is now removed. Use
  `config.unbind(key)` instead.
- `:yank markdown` was deprecated in v1.7.0 and is now removed. Use
  `:yank inline [{title}]({url})` instead.

Added
~~~~~

- New `:debug-keytester` command, which shows a "key tester" widget.
  Previously, that was only available as a separate application via `python3 -m
  scripts.keytester`.
- New `:config-diff` command which opens the `qute://configdiff` page.
- New `--debug-flag log-cookies` to log cookies to the debug log.
- New `colors.contextmenu.disabled.{fg,bg}` settings to customize colors for
  disabled items in the context menu.
- New line selection mode (`:toggle-selection --line`), bound to `Shift-V` in caret mode.
- New `colors.webpage.darkmode.*` settings to control Chromium's dark mode.
  Note that those settings only work with QtWebEngine on Qt >= 5.14 and require
  a restart of qutebrowser.

Changed
~~~~~~~
