@@ -36,7 +36,7 @@ from qutebrowser.utils import log, usertypes, error, standarddir, utils
 CONNECT_TIMEOUT = 100  # timeout for connecting/disconnecting
 WRITE_TIMEOUT = 1000
 READ_TIMEOUT = 5000
-ATIME_INTERVAL = 60 * 60 * 3 * 1000  # 3 hours
+ATIME_INTERVAL = 5000 * 60  # 5 minutes
 PROTOCOL_VERSION = 1
 
 
@@ -397,8 +397,16 @@ class IPCServer(QObject):
         if not path:
             log.ipc.error("In update_atime with no server path!")
             return
+
         log.ipc.debug("Touching {}".format(path))
-        os.utime(path)
+
+        try:
+            os.utime(path)
+        except OSError as e:
+            log.ipc.exception("Failed to update IPC socket, trying to "
+                              "re-listen...")
+            self._server.close()
+            self.listen()
 
     @pyqtSlot()
     def shutdown(self):
